# techpulse

./: .env.example  .gitignore  01-cadrage.md  02-roadmap.md  DEPLOY.md  GUIDE_PROF.md  LICENSE  Makefile  README.md  docker-compose.yml  requirements.txt  setup_mamp.sh
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml
api/src/techpulse_api/: __init__.py  __main__.py  alerts_job.py  app.py  email_sender.py  scheduler.py  schemas.py  version.py  wsgi.py
api/src/techpulse_api/ml/: __init__.py  salary.py  similarity.py
api/src/techpulse_api/routes/: __init__.py  alerts.py  meta.py  offers.py  scraping.py  simulator.py  stats.py
api/tests/: test_endpoints.py
db/: techpulse_snapshot.sql
db/migrations/: 001_init.sql  003_alerts.sql  004_seniority.sql
db/seeds/: 02_technologies.sql
deploy/oracle/: Caddyfile  Caddyfile.ip-only  ORACLE.md  README.md  RETRY.md  auto_retry.py  docker-compose.prod.yml  instance.config.example.yaml  setup-server.sh
docs/: slides.md
docs/design/: variant-1-terminal.html  variant-2-editorial.html  variant-3-glass.html  variant-4-final.html
docs/design/pages/: _shared.css  compare.html  dashboard.html  offer.html  search.html
frontend/: Dockerfile  composer.json  package.json  phpunit.xml  playwright.config.js  tailwind.config.js
frontend/public/: about.php  compare.php  dashboard.php  export.php  index.php  offer.php  scraper.php  search.php  simulator.php  unsubscribe.php
frontend/public/api/: autocomplete.php  palette.php  tech_stats.php  trigger_scrape.php
frontend/src/: bootstrap.php
frontend/src/Db/: Connection.php
frontend/src/Repos/: OfferRepository.php
frontend/src/repos/: OfferRepository.php  TechRepository.php
frontend/src/views/: about.twig  (+9 more)
frontend/tests/: OfferRepositoryTest.php
frontend/tests-e2e/: smoke.spec.js
scraper/: pyproject.toml
scraper/src/techpulse_scraper/: __init__.py  __main__.py  cli.py  config.py  db.py  http_client.py  logger.py  models.py
scraper/src/techpulse_scraper/parsers/: __init__.py  location_parser.py  remote_parser.py  salary_parser.py  seniority_parser.py  tech_extractor.py
scraper/src/techpulse_scraper/pipelines/: __init__.py  deduplication.py  persistence.py
scraper/src/techpulse_scraper/spiders/: __init__.py  base.py  francetravail_api.py
scraper/src/techpulse_scraper/utils/: __init__.py  fingerprint.py  geocoder.py
scraper/tests/: test_fingerprint.py  test_location_parser.py  test_salary_parser.py
(+5 files in other folders)
