[project]
name = "techpulse-scraper"
version = "0.1.0"
description = "Web scraper du marché emploi tech français — TechPulse"
requires-python = ">=3.11"
authors = [{ name = "Bastien Ruedas" }]
license = { text = "MIT" }

dependencies = [
    "httpx>=0.27",
    "hishel>=0.0.30",
    "tenacity>=9.0",
    "selectolax>=0.3.24",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "sqlalchemy>=2.0.30",
    "pymysql>=1.1",
    "cryptography>=42.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "spacy>=3.7",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
techpulse-scraper = "techpulse_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/techpulse_scraper"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PTH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
